# demo-reinvent-2025

./: .PHASE2_DOUBLECHECK.md  .PHASE2_VERIFICATION.md  .VERIFICATION.md  .gitignore  CLAUDE.md  Makefile  README.md  flake.nix  foo.txt  pyproject.toml  pytest.ini  result-reinvent-demo-ticket-generator  result-reinvent-demo-ticket-generator-log  result-reinvent-demo-ticket-processor  result-reinvent-demo-ticket-processor-log
.flox/: env.json
.flox/env/: manifest.toml
.flox/pkgs/: reinvent-demo-combined.nix  reinvent-demo-ticket-generator.nix  reinvent-demo-ticket-processor.nix
docs/: ARCHITECTURE.md  CPU_VARIANTS.md  EKS_SETUP_COMMANDS.sh  EKS_SETUP_COMMANDS_FIXED.sh  EKS_SETUP_FOR_CI.md  FIFTH_REVIEW_FINDINGS.md  FINAL_SCRIPT_REVIEW.md  FINAL_VERIFICATION.md  FIVE_PASS_ANALYSIS.md  FIXES_APPLIED_SUMMARY.md  FIX_IMPLEMENTATION_PLAN.md  FOURTH_REVIEW_FINDINGS.md  IMAGELESS_K8S.md  PASS_11_FINDINGS.md  PASS_12_FINDINGS.md  PHASE3_SUMMARY.md  PHASE3_VERIFICATION.md  PHASE4_SUMMARY.md  PHASE4_VERIFICATION.md  PROJECT_SUMMARY.md  PUBLISHING_GUIDE.md  SCRIPT_REVIEW.md  SECOND_FIVE_PASS_ANALYSIS.md  SIXTH_REVIEW_FINDINGS.md  THIRD_REVIEW_COMPLETE.md  check-ssm.sh
k8s/: test-flox-pod.yaml
scripts/: build-package.sh  dev.sh  install-flox-shim-baremetal.sh
scripts/localstack/: init-resources.sh  seed-data.sh
src/common/: __init__.py  aws_clients.py  config.py  schemas.py
src/generator/: __init__.py  ticket_generator.py
src/processor/: __init__.py  classifier.py  embeddings.py  models.py  summarizer.py  worker.py
tests/integration/: test_localstack.py  test_ml_pipeline.py
tests/unit/: test_processor.py
xplatform-cli-tools/.flox/: env.json
xplatform-cli-tools/.flox/env/: manifest.toml
